--- a/package.json
+++ b/package.json
@@ -9,15 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@radix-ui/react-accordion": "^1.0.0",
-    "@radix-ui/react-dropdown-menu": "^0.1.7-rc.44",
-    "@types/react-datepicker": "^4.4.2",
-    "date-fns": "^2.28.0",
     "next": "12.2.0",
     "react": "18.2.0",
-    "react-datepicker": "^4.8.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.33.1",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
@@ -36,8 +30,6 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.6.0",
     "eslint-plugin-react": "^7.30.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "typescript": "^4.7.4",
-    "webpack": "^5.73.0"
+    "typescript": "^4.7.4"
   }
 }
